[package]
name = "patteydb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.93"
async-graphql = "7.0.11"
pyo3 = "0.23.1"
reqwest = "0.12.9"
serde = "1.0.215"
serde_json = "1.0.133"
tokio = "1.41.1"
